labs3.txt
arithmatic and relational operation
404:: command not found
dl3@soetcse:~$ subl
dl3@soetcse:~$ ls
Desktop    Downloads         Music     Public     Videos
Documents  examples.desktop  Pictures  Templates
dl3@soetcse:~$ mkdir poojitha
dl3@soetcse:~$ cd poojitha
dl3@soetcse:~/poojitha$ subl
dl3@soetcse:~/poojitha$ python3 file.py
38
dl3@soetcse:~/poojitha$   python3 file.py
enter a value26
enter b value12
2612
dl3@soetcse:~/poojitha$ python3 file.py
enter a value13
enter b value87
1387
dl3@soetcse:~/poojitha$ python3 file.py
enter a value13
enter b value87
100
dl3@soetcse:~/poojitha$ clear

dl3@soetcse:~/poojitha$ python
Python 2.7.15rc1 (default, Apr 15 2018, 21:51:34) 
[GCC 7.3.0] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> a=2
>>> b=6
>>> c=a+b
>>> print(c)
8
>>> a=12
>>> b=26
>>> c=a-b
>>> print(c)
-14
>>> 
>>> a=10
>>> b=18
>>> c=a*b
>>> ptiny(c)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'ptiny' is not defined
>>> a=10
>>> b=18
>>> c=int(a*b)
>>> print(c)
180
>>> a=4
>>> b=8
>>> c=a/b
>>> print(c)
0
>>> a=8
>>> b=4
>>> c=a/b
>>> print(c)
2
>>> a=10
>>> b=5
>>> c=a%b
>>> print(c)
0
>>> a=5
>>> b=15
>>> c=a%b
>>> print(c)
5
>>> a=4
>>> b=2
>>> c=a^b
>>> print(c)
6
>>> a=6
>>> b=2
>>> c=a^^b
  File "<stdin>", line 1
    c=a^^b
        ^
SyntaxError: invalid syntax
>>> a=6
>>> b=2
>>> c=a//b
>>> print(c)
3
>>> a=3
>>> b=2
>>> c=a**b
>>> print(c)
9
>>> a=5
>>> b=9
>>> a>b
False
>>> a=10
>>> b=20
>>> a<b
True
>>> a=5
>>> b=12
>>> a>=b
False
>>> a=9
>>> b=11
>>> a<=b
True
>>> a=56
>>> b=98
>>> a==b
False
>>> a=32
>>> b=78
>>> a/=b
>>> a=!=b
  File "<stdin>", line 1
    a=!=b
       ^
SyntaxError: invalid syntax

